@@ -20,6 +20,7 @@ package org.apache.tika.server.core;
 import java.io.IOException;
 import java.io.InputStream;
 import javax.ws.rs.core.HttpHeaders;
+import javax.ws.rs.core.UriInfo;
 
 import org.apache.tika.metadata.Metadata;
 
@@ -31,7 +32,21 @@ import org.apache.tika.metadata.Metadata;
  */
 public interface InputStreamFactory {
 
+    /**
+     * @deprecated use {@link #getInputStream(InputStream, Metadata, HttpHeaders, UriInfo)}
+     * @param is
+     * @param metadata
+     * @param httpHeaders
+     * @return
+     * @throws IOException
+     */
+    @Deprecated
     InputStream getInputStream(InputStream is, Metadata metadata, HttpHeaders httpHeaders)
+            throws IOException;
+
+
+    InputStream getInputStream(InputStream is, Metadata metadata, HttpHeaders httpHeaders,
+                               UriInfo uriInfo)
             throws IOException;
 
 }
