@@ -23,8 +23,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import javax.ws.rs.core.Response;
@@ -36,7 +34,7 @@ import org.apache.cxf.jaxrs.lifecycle.SingletonResourceProvider;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
-import org.apache.tika.config.TikaConfig;
+import org.apache.tika.io.TikaInputStream;
 import org.apache.tika.metadata.Metadata;
 import org.apache.tika.metadata.TikaCoreProperties;
 import org.apache.tika.metadata.serialization.JsonMetadataList;
@@ -76,11 +74,9 @@ public class FetcherTest extends CXFTestBase {
     }
 
     @Override
-    protected InputStreamFactory getInputStreamFactory(TikaConfig tikaConfig) {
-        try {
-            Path configPath = Paths.get(
-                    getClass().getResource("/config/tika-config-url-fetcher.xml").toURI());
-            FetcherManager fetcherManager = FetcherManager.load(configPath);
+    protected InputStreamFactory getInputStreamFactory(InputStream tikaConfigInputStream) {
+        try (TikaInputStream tis = TikaInputStream.get(tikaConfigInputStream)) {
+            FetcherManager fetcherManager = FetcherManager.load(tis.getPath());
             return new FetcherStreamFactory(fetcherManager);
         } catch (Exception e) {
             throw new RuntimeException(e);
